# tucows-challenge

./: README.md  compose.yaml  pyproject.toml  requirements.txt
data/: sample-graph.xml  sample-queries.json
tucows/: log.py
tucows/input/: __init__.py  graph.py  graph.xsd  processing.py
tucows/models/: __init__.py
tucows/run/: graph.py  query.py  schema.py
